Добавление защиты данных в LocalStorage и SessionStorage

--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -51,6 +51,7 @@
     <component type="typeof(App)" render-mode="ServerPrerendered" />
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="_content/Microsoft.AspNetCore.ProtectedBrowserStorage/protectedBrowserStorage.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
