--- a/Pages/Account/Authorization/Register-confirm.razor
+++ b/Pages/Account/Authorization/Register-confirm.razor
@@ -1,4 +1,4 @@
-﻿@page "/account/authorization/register-confirm"
+﻿@page "/register-confirm"
 
 <section class="register-confirm">
     <div class="register-confirm__container">
