--- a/Pages/Rules/Privacy.razor
+++ b/Pages/Rules/Privacy.razor
@@ -1,4 +1,5 @@
 ﻿@page "/rules/privacy"
+@attribute [AllowAnonymous]
 
 <section class="privacy">
     <div class="privacy__container">
@@ -242,7 +243,7 @@
                 </p>
             </div>
             <div class="privacy__paragraph-block">
-                <h2 class="paragraph-block__title">13. Вопросы и предложения</h2>
+                <h2 class="paragraph-block__title">12. Вопросы и предложения</h2>
                 <p class="paragraph-block__text">
                     Veco приветствует Ваши вопросы и предложения, касающиеся исполнения или изменения настоящей Политики. Пожалуйста, воспользуйтесь нашей формой обратной связи. Вы также можете воспользоваться этим адресом для направления запросов о реализации Ваших прав или жалоб относительно некорректности Вашей Персональной информации или незаконности ее обработки.
                 </p>
