--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -44,11 +44,11 @@
     <meta name="twitter:site" content="Veco" />
 
     <base href="~/" />
-    <link href="~/css/styles.min.css" rel="stylesheet" />
     <link href="WebStore.styles.css" rel="stylesheet" />
+    <link href="~/css/styles.min.css" rel="stylesheet" />
 </head>
 <body>
-    <component type="typeof(App)" render-mode="ServerPrerendered" />
+    <component type="typeof(App)" render-mode="Server" />
 
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/Microsoft.AspNetCore.ProtectedBrowserStorage/protectedBrowserStorage.js"></script>
