--- a/Pages/Account/Authorization/Register-successfully.razor
+++ b/Pages/Account/Authorization/Register-successfully.razor
@@ -1,9 +1,9 @@
-﻿@page "/account/authorization/register-successfully"
+﻿@page "/register-successfully"
 
 <section class="register-successfully">
     <div class="register-successfully__container">
         <div class="register-successfully__block">
-            <img class="register-successfully__image" src="./icons/register-successfully/Mail.svg" alt="Иконка почты">
+            <img class="register-successfully__image" src="/icons/register-successfully/Mail.svg" alt="Иконка почты">
             <div class="register-successfully__block-text block-text">
                 <h1 class="block-text__title">Подтверждение аккаунта через почту</h1>
                 <p class="block-text__text">Вы успешно подтвердили почту kakawkawww13@mail.ru! Вы автоматически будете перенаправленны на предыдущую страницу через 5с</p>
