--- a/Pages/Account/Authorization/Register.razor.css
+++ b/Pages/Account/Authorization/Register.razor.css
@@ -1,20 +1,17 @@
-﻿.form__password-confirm-block {
-  position: relative;
-  width: 100%; }
-
-.register {
+﻿.register {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%; }
   .register__block {
     max-width: 400px;
-    margin: 0 auto; }
+    margin: 0em auto;
+    padding: 3em 0em; }
   .register__container {
     margin: 0em auto;
     max-width: 100%;
-    padding: 3em 2em; }
-  .register__form {
+    padding: 0em 2em; }
+  ::deep .register__form {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,6 +20,161 @@
     box-shadow: 0px 0px 1px black;
     padding: 3em 4em;
     border-radius: 10px; }
+
+.form__logo {
+  object-fit: contain;
+  width: 7em;
+  height: 7em; }
+
+.form__title {
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 1em;
+  font-weight: 600;
+  font-size: 20px; }
+
+.form__errors-block {
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 0.5em; }
+
+.form__error {
+  display: inline-block;
+  color: red;
+  line-height: 1.3em;
+  text-align: justify; }
+
+.form__email-block {
+  position: relative;
+  width: 100%; }
+
+.form__password-block {
+  margin-top: 0.7em;
+  position: relative;
+  width: 100%; }
+
+.form__password-confirm-block {
+  margin-top: 0.7em;
+  position: relative;
+  width: 100%; }
+
+::deep .form__check-box {
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5em;
+  margin-bottom: 0; }
+
+.form__disclaimer {
+  text-align: center;
+  line-height: 1.3em; }
+  .form__disclaimer a {
+    color: #919191; }
+    .form__disclaimer a:hover {
+      color: #b6b6b6; }
+
+.form__button-submut {
+  color: white;
+  padding: 1.165em 0em;
+  border-radius: 5px;
+  background-color: black;
+  min-width: 100px;
+  width: 100%; }
+
+.form__fogot-password {
+  color: #919191; }
+  .form__fogot-password:hover {
+    color: #b6b6b6; }
+
+.form__register {
+  color: #919191; }
+  .form__register:hover {
+    color: #b6b6b6; }
+
+.form__external-logins-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5em;
+  width: 100%; }
+
+::deep .email-block__input {
+  border-radius: 5px;
+  box-shadow: 0px 0px 1px black;
+  padding: 1em 1em;
+  min-width: 100px;
+  width: 100%; }
+  ::deep .email-block__input.invalid {
+    box-shadow: 0px 0px 1px red;
+    border: 1px red solid; }
+
+.email-block__label {
+  color: #65657b;
+  left: 14px;
+  line-height: 14px;
+  font-size: 15px;
+  pointer-events: none;
+  position: absolute;
+  transform-origin: 0 50%;
+  transition: transform 200ms, color 200ms;
+  top: 16px; }
+  .email-block__label.shift {
+    transition: 0.3s all ease;
+    position: absolute;
+    top: 0;
+    transform: translateY(-10px);
+    background-color: white; }
+
+::deep .password-block__input {
+  border-radius: 5px;
+  box-shadow: 0px 0px 1px black;
+  padding: 1em 1em;
+  min-width: 100px;
+  width: 100%;
+  padding-right: 2.8em; }
+  ::deep .password-block__input.invalid {
+    box-shadow: 0px 0px 1px red;
+    border: 1px red solid; }
+
+::deep .password-block__label {
+  color: #65657b;
+  left: 14px;
+  line-height: 14px;
+  font-size: 15px;
+  pointer-events: none;
+  position: absolute;
+  transform-origin: 0 50%;
+  transition: transform 200ms, color 200ms;
+  top: 16px; }
+  ::deep .password-block__label.shift {
+    transition: 0.3s all ease;
+    position: absolute;
+    top: 0;
+    transform: translateY(-10px);
+    background-color: white; }
+
+.password-block__control {
+  cursor: pointer;
+  position: absolute;
+  top: 9.5px;
+  right: 11px;
+  display: inline-block;
+  width: 27px;
+  height: 27px;
+  background: url("../icons/login/Eye.svg") center/contain no-repeat; }
+  .password-block__control.view {
+    position: absolute;
+    top: 9.5px;
+    right: 11px;
+    display: inline-block;
+    width: 27px;
+    height: 27px;
+    background: url("../icons/login/Slash-eye.svg") center/contain no-repeat; }
 
 .password-block__meter {
   display: none;
@@ -47,8 +199,80 @@
   .password-block__meter-label.show {
     display: block; }
 
+.check-box__input {
+  display: none; }
+
+.check-box__fake-input {
+  position: relative;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  box-shadow: 0px 0px 1px black;
+  border-radius: 1px; }
+  .check-box__fake-input::before {
+    content: '';
+    position: absolute;
+    top: 25%;
+    left: 24%;
+    transform: translate(-50%, -50%);
+    width: 11px;
+    height: 7px;
+    border-right: 3px solid black;
+    border-top: 3px solid black;
+    transform: rotate(135deg);
+    transition: 0.15s all ease;
+    opacity: 0; }
+
+.check-box__input:checked + .check-box__fake-input::before {
+  opacity: 1; }
+
+.external-logins-block__title {
+  text-align: center;
+  font-size: 17px;
+  margin: 1em 0em 0.5em; }
+
+.external-logins-block__button-provider {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.7em;
+  width: 100%;
+  color: black;
+  box-shadow: 0px 0px 1px black;
+  border-radius: 5px;
+  padding: 0.5em;
+  background-color: white; }
+  .external-logins-block__button-provider img {
+    height: 2.5em;
+    width: 2.5em; }
+
+@media (max-width: 830px) {
+  .register__block {
+    padding: 1.5em 0em; }
+  .form__disclaimer {
+    text-align: center;
+    line-height: 1.3em; }
+    .form__disclaimer a {
+      color: #919191; }
+      .form__disclaimer a:hover {
+        color: #919191; }
+      .form__disclaimer a:active {
+        color: #b6b6b6; }
+  .form__fogot-password {
+    color: #919191; }
+    .form__fogot-password:hover {
+      color: #919191; }
+    .form__fogot-password:active {
+      color: #b6b6b6; }
+  .form__login {
+    color: #919191; }
+    .form__login:hover {
+      color: #919191; }
+    .form__login:active {
+      color: #b6b6b6; } }
+
 @media (max-width: 400px) {
   .register__container {
     padding: 0em 1em; }
-  .register__form {
-    padding: 2em 2em; } }
+  ::deep .register__form {
+    padding: 2em; } }
