--- a/Pages/Index.razor.Carusel.scss
+++ b/Pages/Index.razor.Carusel.scss
@@ -1,10 +1,3 @@
-.carousel__dots {
-    margin-top: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .carousel {
     max-width: 100em;
     width: 90vw;
@@ -22,20 +15,19 @@
         margin-left: 1em;
     }
 
-    &__dots {
+    ::deep &__dots {
         margin-top: 30px;
         display: flex;
         justify-content: center;
         align-items: center;
 
         li {
+            cursor: pointer;
             margin: 0px 3px;
-
-            button {
-                height: 5px;
-                width: 30px;
-                background-color: black;
-            }
+            height: 6px;
+            font-size: 0;
+            width: 30px;
+            background-color: black;
 
             &.slick-active {
                 background-color: gray;
@@ -158,6 +150,7 @@
 
     &__favorites {
         position: absolute;
+        cursor: pointer;
         top: 10px;
         right: 10px;
         opacity: 0.6;
@@ -173,6 +166,7 @@
 
     &__cart {
         position: absolute;
+        cursor: pointer;
         top: 40px;
         right: 11.5px;
         opacity: 0.6;
