--- a/Pages/_Imports.razor
+++ b/Pages/_Imports.razor
@@ -14,3 +14,6 @@
 @using System.Diagnostics
 @using Microsoft.Extensions.Logging
 @using WMBlazorSlickCarousel.WMBSC
+@using Microsoft.AspNetCore.Mvc
+@using WebStore.Services
+@using WebStore.Domain.Consts 
