--- a/Pages/Account/Authorization/Login.razor.scss
+++ b/Pages/Account/Authorization/Login.razor.scss
@@ -111,6 +111,7 @@
 
     &__register {
         color: rgb(145, 145, 145);
+        cursor: pointer;
 
         &:hover {
             color: rgb(182, 182, 182);
