--- a/Pages/Account/Authorization/Logout.razor
+++ b/Pages/Account/Authorization/Logout.razor
@@ -1,8 +1,6 @@
 ﻿@page "/account/authorization/logout/{returnUrl?}"
 @attribute [Authorize]
 @code{
-    [CascadingParameter] public Task<AuthenticationState> AuthenticationStateTask { get; set; }
-
     [Parameter] public string ReturnUrl { get; set; }
 
     [Inject] public TokenAuthenticationStateService TokenAuthenticationStateService { get; set; }
@@ -10,7 +8,7 @@
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        ReturnUrl = string.IsNullOrEmpty(ReturnUrl) ? NavigationManager.BaseUri : ReturnUrl.Replace('$', '/');
+        ReturnUrl = string.IsNullOrEmpty(ReturnUrl) ? NavigationManager.BaseUri : ReturnUrl.Replace('$', '/'); // Костыль, требуется заменить символы '/' на '$' в возвращаемом URL адресе при его отправке и наоборот
         await TokenAuthenticationStateService.LogoutAuthenticationStateAsync();
         NavigationManager.NavigateTo(ReturnUrl, true);
     }
