--- a/Pages/Account/Authorization/Register.razor
+++ b/Pages/Account/Authorization/Register.razor
@@ -1,7 +1,6 @@
 ﻿@page "/account/authorization/register/{returnUrl?}"
 @inherits RegisterBase
-@attribute [AllowAnonymous]
-@attribute [IgnoreAntiforgeryToken]
+@attribute [Authorize(Policy = PolicyConst.User)]
 
 <section class="register">
     <div class="register__container">
@@ -33,7 +32,7 @@
                 </div>
 
                 <div class="form__password-confirm-block">
-                    <input class="password-block__input @(IsConfirmPasswordInputValid ? "" : "invalid")" @bind="ConfirmPassword" @oninput="((e) => ConfirmPasswordInputChangeValue(e))" type="@(IsConfirmPasswordShow ? "text" : "password")" aria-label="Строка для ввода пароля пользователя" />
+                    <input class="password-block__input @(IsConfirmPasswordInputValid ? "" : "invalid")" @bind="confirmPassword" @oninput="((e) => ConfirmPasswordInputChangeValue(e))" type="@(IsConfirmPasswordShow ? "text" : "password")" aria-label="Строка для ввода пароля пользователя" />
                     <span class="password-block__control @(IsConfirmPasswordShow ? "view" : "")" @onclick="@(() => IsConfirmPasswordShow = !IsConfirmPasswordShow)" />
                     <label class="password-block__label @(IsConfirmPasswordLabelShift ? "shift" : "")">Подтвердите пароль</label>
                 </div>
@@ -41,7 +40,7 @@
                 <label class="form__check-box"><input class="check-box__input" @bind-value="RegisterViewModel.Remember" type="checkbox" aria-label="Запомнить пользователяы"><span class="check-box__fake-input"></span>Запомнить меня</label>
                 <span class="form__disclaimer">Регистрируясь вы соглашаетесь с <a href="/rules/privacy" aria-label="Перейти на страницу политики конфиденциальности" title="Перейти на страницу политики конфиденциальности">Политикой конфиденциальности</a> и <a href="/rules/use-conditions" aria-label="Перейти на страницу условий использования" title="Перейти на страницу условий использования">Условиями использования</a> Veco</span>
                 <button class="form__button-submut" type="submit" aria-label="Кнопка подтверждения данных">Зарегистрироваться</button>
-                <a class="form__register" href="/account/authorization/login/@RegisterViewModel.ReturnUrl">Войти</a>
+                <a class="form__login" @onclick="NavigateToLogin">Войти</a>
 
                 @*<div class="form__external-logins-block external-logins-block">
                         <span class="external-logins-block__title">Зарегистрироваться с помощью</span>
