--- a/Pages/Index.razor.Carusel.scss
+++ b/Pages/Index.razor.Carusel.scss
@@ -35,27 +35,24 @@
         }
     }
 
-    &__prev-arrow {
-        z-index: 2;
-        width: min-content;
-        height: min-content;
+    ::deep .slick-prev:before {
+        content: '<';
+        font-size: 30px;
         position: absolute;
-        top: 50%;
-        left: 0;
-        transform: translateY(-50%);
-        margin-left: 1.5em;
-        padding: 1em 2em;
-        cursor: pointer;
+        top: 40%;
+        right: 31%;
+    }
+
+    ::deep .slick-prev {
+        margin-left: 50px;
+        padding: 40px 37px;
         display: flex;
         justify-content: center;
         align-items: center;
+        padding-top: 35px;
         border-radius: 50%;
-
-        span {
-            padding-bottom: 0.22em;
-            text-align: center;
-            font-size: 4em;
-        }
+        box-shadow: none;
+        background-color: darkgray;
 
         &:hover {
             background-color: #e2e2e2;
@@ -66,27 +63,24 @@
         }
     }
 
-    &__next-arrow {
-        z-index: 2;
-        width: min-content;
-        height: min-content;
+    ::deep .slick-next:before {
+        content: '>';
+        font-size: 30px;
         position: absolute;
-        top: 50%;
-        right: 0;
-        transform: translateY(-50%);
-        margin-right: 1.5em;
-        padding: 1em 2em;
-        cursor: pointer;
+        top: 40%;
+        left: 31%;
+    }
+
+    ::deep .slick-next {
+        margin-right: 50px;
+        padding: 40px 37px;
         display: flex;
         justify-content: center;
         align-items: center;
+        padding-top: 35px;
         border-radius: 50%;
-
-        span {
-            padding-bottom: 0.22em;
-            text-align: center;
-            font-size: 4em;
-        }
+        box-shadow: none;
+        background-color: darkgray;
 
         &:hover {
             background-color: #e2e2e2;
