Создание кнопки для скрола вверх страницы

--- a/Pages/Shared/Layout/MainLayout.razor
+++ b/Pages/Shared/Layout/MainLayout.razor
@@ -26,6 +26,9 @@
         </ul>
     </nav>
 
+
+    <div class="scroll-to-up @(ScrollToUpIsActive ? "active" : string.Empty)" @onclick="ScrollToTopAsync"><img src="/icons/import/Scroll-to-top.svg" alt="Кнопка для скрола в самый вверх сайта" title="Подняться наверх"></div>
+
     <Header />
 
     <main class="content">
@@ -35,3 +38,28 @@
     <Footer />
 
 </div>
+
+@code{
+    [Inject] public IJSRuntime JSRuntime { get; set; }
+
+    public bool ScrollToUpIsActive { get; set; }
+
+    protected override async Task OnInitializedAsync()
+    {
+        await JSRuntime.InvokeVoidAsync("SetMainLayouteDotnetReference", DotNetObjectReference.Create(this));
+    }
+
+    [JSInvokable]
+    public void ShowScrollToUp()
+    {
+        ScrollToUpIsActive = true;
+        StateHasChanged();
+    }
+    [JSInvokable]
+    public void HideScrollToUp()
+    {
+        ScrollToUpIsActive = false;
+        StateHasChanged();
+    }
+    public async Task ScrollToTopAsync() => await JSRuntime.InvokeVoidAsync("scrollToTop");
+}
