--- a/Pages/Shared/Technical-works.razor
+++ b/Pages/Shared/Technical-works.razor
@@ -1,6 +1,4 @@
-﻿@page "/technical-works"
-
-<section class="technical-works">
+﻿<section class="technical-works">
     <div class="technical-works__container">
         <div class="technical-works__block">
             <img class="technical-works__image" src="./icons/technical-works/Tools.svg" alt="Иконка инструментов">
